# p4adev_toolkit

./: .gitignore  .gitmodules  README.md  build.sh  build_docker.sh  buildozer.spec  clean_build.sh  pyproject.toml  python-for-android  sync_config.json
p4a-recipes/aiohttp/: __init__.py
p4a-recipes/app/: __init__.py
p4a-recipes/certifi/: __init__.py
p4a-recipes/charset_normalizer/: __init__.py
p4a-recipes/colorama/: __init__.py
p4a-recipes/cython/: __init__.py
p4a-recipes/expandvars/: __init__.py
p4a-recipes/frozenlist/: __init__.py
p4a-recipes/hostpython3/: __init__.py
p4a-recipes/importlib_metadata/: __init__.py
p4a-recipes/jedi/: __init__.py
p4a-recipes/kivy/: __init__.py
p4a-recipes/kivy_md2_widgets/: __init__.py
p4a-recipes/libffi/: __init__.py
p4a-recipes/libzmq/: __init__.py
p4a-recipes/lxml/: __init__.py
p4a-recipes/markupsafe/: __init__.py
p4a-recipes/multidict/: __init__.py
p4a-recipes/openssl/: __init__.py  use_app_path_env4conf.patch
p4a-recipes/p4a_dev/: __init__.py
p4a-recipes/p4adev_tools/: __init__.py
p4a-recipes/packaging/: __init__.py
p4a-recipes/psutil/: __init__.py
p4a-recipes/pyproject_hooks/: __init__.py
p4a-recipes/python3/: __init__.py
p4a-recipes/pyzmq/: __init__.py
p4a-recipes/sdl2/: __init__.py
p4a-recipes/sdl2_image/: __init__.py
p4a-recipes/sdl2_mixer/: __init__.py
p4a-recipes/sdl2_ttf/: __init__.py
p4a-recipes/setuptools/: __init__.py
p4a-recipes/tomli/: __init__.py
p4a-recipes/utils/: __init__.py  bundle_installer.py
p4a-recipes/utils/recipe/: __init__.py  adv_cc_recipe.py  build_tool_recipe.py  no_setup_pypi_recipe.py
p4a-recipes/wheel/: __init__.py
p4a-recipes/yarl/: __init__.py
p4a-recipes/zipp/: __init__.py
scripts/: autosync_changes.py  build.sh  clean_build.sh
src/: MANIFEST.in  setup.py
src/android_conf/: backup_rules.xml
src/app/: __init__.py
src/app/Controller/: base_controller.py  main_screen.py  settings_screen.py
src/app/Model/: base_model.py  main_screen.py  settings_screen.py
src/app/View/: base_screen.py  base_view.py  screenmanager.py  screens.py
src/app/View/main_screen/: main_screen.py
src/app/View/settings_screen/: __init__.py  main_screen.py
src/app/View/widgets/: about_dialog.py  ext_txtfield.py  highlighted_border.kv  logview.kv  secret_txtfield.kv  single_ins.py  transition.py
src/app/View/widgets/textinput/: __init__.py  textinput.py
src/app/View/widgets/ui/: highlighted_border.kv  logview.kv  selection.kv  textinput.kv
src/app/View/widgets/ui/extensions/: dynamic_list_items.kv
src/app/bases/: __init__.py  abc.py  ads_admob.py  base.py  broadcast.py  conf.py  debug.py  meta.py  services.py  style.py  tweaks.py
src/app/entry/: .ini  launch.py
src/app/libs/: __init__.py  filechooser.py
src/app/libs/PyScopedStorage/: __init__.py  android_objects.py  filechooser.py  io.py  platform_utils.py  tools.py  utils.py
src/app/utility/: clock_timer.py  kv_conf.py  logger.py  observer.py  utils.py
src/app_launch/: main.py
src/data/: icon_fg_512.xcf
src/kivy_md2_widgets/: pyproject.toml  setup.py
src/kivy_md2_widgets/kivy_md2_widgets/pickers/: __init__.py
src/kivy_md2_widgets/kivy_md2_widgets/pickers/themepicker/: __init__.py  themepicker.kv  themepicker.py
src/p4a_dev/app/: launch.py
src/p4a_dev/controller/: main_screen.py  settings_screen.py
src/p4a_dev/libs/: ssl_conf.py
src/p4a_dev/libs/dev/: dev_ipykernel.py
src/p4a_dev/model/: main_screen.py
src/p4a_dev/services/: dev_ipykernel.py
src/p4a_dev/view/: base_screen.py  screens.py
src/p4a_dev/view/main_screen/: main_screen.py
src/p4a_dev/view/settings_screen/: main_screen.py
